force-app/main/default/objects/Trailhead_Superbadge__c/Trailhead_Superbadge__c.object-meta.xml
<CustomObject>
    <label>Trailhead Superbadge</label>
    <nameField>
        <label>Superbadge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailhead Superbadges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>