force-app/main/default/objects/Trailhead_Superbadge__c/fields/Favourite__c.field-meta.xml
<CustomField>
    <fullName>Favourite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Favourite</label>
    <type>Checkbox</type>
</CustomField>