force-app/main/default/objects/Trailhead_Superbadge__c/fields/Superbadge_Description__c.field-meta.xml
<CustomField>
    <fullName>Superbadge_Description__c</fullName>
    <label>Superbadge Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>