force-app/main/default/objects/Trailhead_Superbadge__c/fields/Superbadge_Image__c.field-meta.xml
<CustomField>
    <fullName>Superbadge_Image__c</fullName>
    <label>Superbadge Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>