force-app/main/default/objects/Trailhead_Superbadge__c/fields/Superbadge_Link__c.field-meta.xml
<CustomField>
    <fullName>Superbadge_Link__c</fullName>
    <label>Superbadge Link</label>
    <type>Url</type>
</CustomField>